# Calculator

./: .anjuta_sym_db.db  Makefile  Makefile.in  README.md  config.h  config.status  configure  configure.ac  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/po/: missing
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  basic_operations.c  basic_operations.c~  basic_operations.h  basic_operations.h~  calculator  calculator.c  calculator.h  calculator.ui  callbacks.c  callbacks.c~  callbacks.h  callbacks.h~  gtk_button_extras.c  gtk_button_extras.c~  gtk_button_extras.h  gtk_button_extras.h~  gtk_label_extras.c  gtk_label_extras.c~  gtk_label_extras.h  gtk_label_extras.h~  main.c  processor.c  processor.c~  processor.h  processor.h~
src/.deps/: basic_operations.Po  calculator.Po  callbacks.Po  gtk_button_extras.Po  gtk_label_extras.Po  main.Po  processor.Po
